ADWD-1892 Load and display letter metadata and fulltext
- Load letter data from Solr
- Display metadata and set nav links
- Display fulltext (MathJax is not rendered yet)

Including integration test for Solr connection.

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -12,6 +12,7 @@ impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
 julianDate: 'Julianisches Datum'
 leibnizLetters: 'Leibniz-Briefe'
+letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
 letterNumber: 'Brief Nr.&nbsp;{number}'
 navigation: 'Navigation'
 nextLetterNumber: 'Folgender Brief Nr.&nbsp;{number}'
