ADWD-1892 Browse letters, load and render fulltext
- Load letter fulltext from remote Solr as JSONP
- Include MathJax to render mathematical notation (loaded via Funnel)
- Step trough all available letters
- Introduce lanes and ability to config views via GET parameter
- Add hover-popups for all actions

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,32 +1,39 @@
 aboutThisProjekt: 'Über das Projekt'
 browse: 'Blättern'
 contact: 'Kontakt'
-currentPage: 'aktuelle Seite'
+dateGregorian: 'Gregorianisches&nbsp;Datum'
+dateJulian: 'Julianisches&nbsp;Datum'
 fullScreen: 'Vollbild'
+fulltextNotAvailable: 'Der Volltext dieses Briefes ist noch nicht verfügbar.'
 date: 'Datum'
 goettingenAcademyOfSciencesAndHumanities: 'Akademie der Wissenschaften zu Göttingen'
 goToPortal: 'Zum AdW-Portal'
-gregorianDate: 'Gregorianisches Datum'
 historicCriticalEdition: 'Historisch-kritische Ausgabe:'
 impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
-julianDate: 'Julianisches Datum'
 leibnizLetters: 'Leibniz-Briefe'
 letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
-letterNumber: 'Brief Nr.&nbsp;{number}'
+letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
+letterNotExistingNext: 'Kein Nachfolgender Brief vorhanden'
+letterNumber: 'Briefnummer'
+letterNumberNext: 'Folgender&nbsp;Brief<br>Nr.&nbsp;{number}'
+letterNumberPrev: 'Voriger&nbsp;Brief<br>Nr.&nbsp{number}'
+loading: 'Brief wird geladen &hellip;'
 navigation: 'Navigation'
-nextLetterNumber: 'Folgender Brief Nr.&nbsp;{number}'
-nextPage: 'nächste Seite'
+pageCurrent: 'aktuelle Seite'
+pageNext: 'nächste Seite'
+pagePrev: 'vorige Seite'
 permaLink: 'Persistente URL:'
-prevLetterNumber: 'Voriger Brief Nr.&nbsp{number}'
-prevPage: 'vorige Seite'
 recipient: 'Empfänger'
 recommendedCitation: 'Zitiervorschlag'
 restore: 'Wieder herstellen'
+scans: 'Scan'
 search: 'Suchen'
 searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
 sender: 'Absender'
 to: 'an'
+transcript: 'Transkription'
+variants: 'Varianten'
 zoomIn: 'Vergrößern'
 zoomOut: 'Verkleinern'
