--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,6 +1,7 @@
 aboutThisProjekt: 'Über das Projekt'
 browse: 'Blättern'
 contact: 'Kontakt'
+context: 'Kontext'
 dateGregorian: 'Gregorianisches&nbsp;Datum'
 dateJulian: 'Julianisches&nbsp;Datum'
 fullScreen: 'Vollbild'
@@ -11,15 +12,21 @@ goToPortal: 'Zum AdW-Portal'
 historicCriticalEdition: 'Historisch-kritische Ausgabe:'
 impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
+language: 'Sprache'
+languages: 'Sprachen'
 leibnizLetters: 'Leibniz-Briefe'
+letterNext: 'Folgender&nbsp;Brief'
 letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
 letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
 letterNotExistingNext: 'Kein Nachfolgender Brief vorhanden'
-letterNumber: 'Briefnummer'
-letterNumberNext: 'Folgender&nbsp;Brief<br>Nr.&nbsp;{number}'
-letterNumberPrev: 'Voriger&nbsp;Brief<br>Nr.&nbsp{number}'
+letterPrev: 'Voriger&nbsp;Brief'
 loading: 'Brief wird geladen &hellip;'
-navigation: 'Navigation'
+location: 'Ort'
+menu: 'Menü'
+metadata: 'Metadaten'
+metadataHide: 'Metadaten verbergen'
+metadataShow: 'Metadaten anzeigen'
+number: 'Nummer&nbsp;{number}'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
 pagePrev: 'vorige Seite'
@@ -32,7 +39,9 @@ search: 'Suchen'
 searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
 sender: 'Absender'
+series: 'Reihe&nbsp;{series}'
 to: 'an'
+tradition: 'Überlieferung'
 transcript: 'Transkription'
 variants: 'Varianten'
 zoomIn: 'Vergrößern'
