Display full language name in metadata
Related to: ADWD-1892

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -14,6 +14,7 @@ impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
 language: 'Sprache'
 languages: 'Sprachen'
+languageLat: 'Latein'
 leibnizLetters: 'Leibniz-Briefe'
 letterNext: 'Folgender&nbsp;Brief'
 letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
