Change variant display, harmonize DOM of lanes
- Display only variant text and textual witness
- Update translation
- Add lane type to class
- Move letter rendering into own functions

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -41,6 +41,7 @@ searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
 sender: 'Absender'
 series: 'Reihe&nbsp;{series}'
+textualWitness: 'Textzeuge'
 to: 'an'
 tradition: 'Überlieferung'
 transcript: 'Transkription'
