--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,4 +1,5 @@
 aboutThisProjekt: 'Über das Projekt'
+addition: 'Zusatz'
 browse: 'Blättern'
 contact: 'Kontakt'
 context: 'Kontext'
@@ -16,11 +17,11 @@ language: 'Sprache'
 languages: 'Sprachen'
 languageLat: 'Latein'
 leibnizLetters: 'Leibniz-Briefe'
-letterNext: 'Folgender&nbsp;Brief'
+letterNext: 'Folgender Brief dieser Korrespondenz'
 letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
 letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
 letterNotExistingNext: 'Kein Nachfolgender Brief vorhanden'
-letterPrev: 'Voriger&nbsp;Brief'
+letterPrev: 'Vorhergehender Brief dieser Korrespondenz'
 loading: 'Brief wird geladen &hellip;'
 location: 'Ort'
 menu: 'Menü'
@@ -45,6 +46,7 @@ textualWitness: 'Textzeuge'
 to: 'an'
 tradition: 'Überlieferung'
 transcript: 'Transkription'
+variant: 'Variante'
 variants: 'Varianten'
 zoomIn: 'Vergrößern'
 zoomOut: 'Verkleinern'
