Fix display bugs
- Show sender's first name and header and test for it
- Prevent app from failing if non-existing letter ID is provided
- Display date as provided and change popup

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -18,12 +18,13 @@ languages: 'Sprachen'
 languageLat: 'Latein'
 leibnizLetters: 'Leibniz-Briefe'
 letterNext: 'Folgender Brief dieser Korrespondenz'
-letterNotAvailable: 'Brief ID&nbsp;{id} nicht vorhanden'
+letterNotExisting: 'Brief <i>{id}</i> existiert nicht'
 letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
 letterNotExistingNext: 'Kein Nachfolgender Brief vorhanden'
 letterPrev: 'Vorhergehender Brief dieser Korrespondenz'
 loading: 'Brief wird geladen &hellip;'
 location: 'Ort'
+locations: 'Orte'
 menu: 'Menü'
 metadata: 'Metadaten'
 metadataHide: 'Metadaten verbergen'
