Add all letter languages to translation
Resolves: ADWD-1955

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -15,7 +15,16 @@ impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
 language: 'Sprache'
 languages: 'Sprachen'
-languageLat: 'Latein'
+languageName:
+  dan: 'Dänisch'
+  deu: 'Deutsch'
+  eng: 'Englisch'
+  fra: 'Französisch'
+  ita: 'Italienisch'
+  lat: 'Latein'
+  ndl: 'Niederländisch'
+  rus: 'Russisch'
+  swe: 'Schwedisch'
 leibnizLetters: 'Leibniz-Briefe'
 letterNext: 'Folgender Brief dieser Korrespondenz'
 letterNotExisting: 'Brief <i>{id}</i> existiert nicht'
