Move citation to togglable pane, change buttons and labels in header
- Make recommended citation togglable (same as metadata) and add button
- Add Sass mixin for more flexible SVG button generation
- Remove and redraw variant connectors only once after sidebar animation has completed for improved performance
- Add more comprehensive help text to forward/backward buttons
- Add component tests for citation and metadata
- Remove no longer needed uc-first helper

Related to: ADWD-1949

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,6 +1,9 @@
 aboutThisProjekt: 'Über das Projekt'
 addition: 'Zusatz'
 browse: 'Blättern'
+citation: 'Zitierfähige Vollfassung'
+citationHide: 'Zitierfähige Vollfassung verbergen'
+citationShow: 'Zitierfähige Vollfassung anzeigen'
 contact: 'Kontakt'
 context: 'Kontext'
 dateGregorian: 'Gregorianisches&nbsp;Datum'
@@ -44,7 +47,6 @@ pageNext: 'nächste Seite'
 pagePrev: 'vorige Seite'
 permaLink: 'Persistente URL:'
 recipient: 'Empfänger'
-recommendedCitation: 'Zitiervorschlag'
 restore: 'Wieder herstellen'
 scans: 'Scan'
 search: 'Suchen'
@@ -58,5 +60,6 @@ tradition: 'Überlieferung'
 transcript: 'Transkription'
 variant: 'Variante'
 variants: 'Varianten'
+volume: 'Band&nbsp;{volume}'
 zoomIn: 'Vergrößern'
 zoomOut: 'Verkleinern'
