Change title, add styles for general markup in metadata and variants
Move classes used for general text markup to own SCSS file, making them
globally available.

Resolves: ADWD-1949

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -28,7 +28,7 @@ languageName:
   ndl: 'Niederländisch'
   rus: 'Russisch'
   swe: 'Schwedisch'
-leibnizLetters: 'Leibniz-Briefe'
+leibnizLetters: 'Briefportal Leibniz'
 letterNext: 'Folgender Brief dieser Korrespondenz'
 letterNotExisting: 'Brief <i>{id}</i> existiert nicht'
 letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
