Change labels, show hints for uncertain dates
- Change labels (and filenames) as requested
- Show hints for dates if uncertain or added by the editor
- Rename some style blocks to match naming scheme

Resolves: ADWD-1970

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,5 +1,5 @@
 aboutThisProjekt: 'Über das Projekt'
-addition: 'Zusatz'
+addedByEditor: 'Vom Herausgeber hinzugefügt'
 browse: 'Blättern'
 citation: 'Zitierfähige Vollfassung'
 citationHide: 'Zitierfähige Vollfassung verbergen'
@@ -8,6 +8,7 @@ contact: 'Kontakt'
 context: 'Kontext'
 dateGregorian: 'Gregorianisches&nbsp;Datum'
 dateJulian: 'Julianisches&nbsp;Datum'
+exactDateUnknown: 'Genaues Datum unbekannt'
 fullScreen: 'Vollbild'
 fulltextNotAvailable: 'Der Volltext dieses Briefes ist noch nicht verfügbar.'
 date: 'Datum'
@@ -41,6 +42,7 @@ menu: 'Menü'
 metadata: 'Metadaten'
 metadataHide: 'Metadaten verbergen'
 metadataShow: 'Metadaten anzeigen'
+note: 'Notiz'
 number: 'Nummer&nbsp;{number}'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
@@ -48,7 +50,7 @@ pagePrev: 'vorige Seite'
 permaLink: 'Persistente URL:'
 recipient: 'Empfänger'
 restore: 'Wieder herstellen'
-scans: 'Scan'
+manuscript: 'Manuskript'
 search: 'Suchen'
 searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
