Colorize variants and allow them to be toggled
- Add auto-generated colors for textual witnesses and associated variants
- Allow variants of be switched on and off based on witness
- Fade in variants to prevent all of them from appearing cobbled together on startup
- Slightly increase variants re-render timeout for better reponsiveness
- Split up letter route into more functions
- Add test helpers allowing for much shorter integration tests
- Code cleanups

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -1,5 +1,6 @@
 aboutThisProjekt: 'Über das Projekt'
 addedByEditor: 'Vom Herausgeber hinzugefügt'
+attachmentTo: 'Beilage zu'
 browse: 'Blättern'
 citation: 'Zitierfähige Vollfassung'
 citationHide: 'Zitierfähige Vollfassung verbergen'
