Change wording for metadata in header Resolves: ADWD-1995

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -40,9 +40,9 @@ loading: 'Brief wird geladen &hellip;'
 location: 'Ort'
 locations: 'Orte'
 menu: 'Menü'
-metadata: 'Metadaten'
-metadataHide: 'Metadaten verbergen'
-metadataShow: 'Metadaten anzeigen'
+metadata: 'Bibliografische Daten'
+metadataHide: 'Bibliografische Daten verbergen'
+metadataShow: 'Bibliografische Daten anzeigen'
 note: 'Notiz'
 number: 'Nummer&nbsp;{number}'
 pageCurrent: 'aktuelle Seite'
