Improve variants, search, layout and verboseness
Variants:
- Change variant colors
- Add info popup to variant toggle buttons
- Add toggle button for notes and variants without witnesses

Layout and design improvements:
- Move search to header
- Change text input styles
- Improve size calculation of popups
- Make sure lanes always fill the whole viewport even if content does not
- Harmonize button styles
- Delay popups only on mouse in, not on mouse out
- Clean up styles

Misc:
- Display error (instead of blank page) if Solr does not respond
- Remove unused minimized lanes
- Change request method for res doctae search from POST to GET
- Fix display of header data for attachments
- Only convert letter links to Ember transitions, leave external links alone

Related to: ADWD-1824, ADWD-1970

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -7,6 +7,7 @@ citationHide: 'Zitierfähige Vollfassung verbergen'
 citationShow: 'Zitierfähige Vollfassung anzeigen'
 contact: 'Kontakt'
 context: 'Kontext'
+databaseError: 'Datenbankfehler'
 dateGregorian: 'Gregorianisches&nbsp;Datum'
 dateJulian: 'Julianisches&nbsp;Datum'
 exactDateUnknown: 'Genaues Datum unbekannt'
@@ -45,6 +46,7 @@ metadataHide: 'Bibliografische Daten verbergen'
 metadataShow: 'Bibliografische Daten anzeigen'
 note: 'Notiz'
 number: 'Nummer&nbsp;{number}'
+otherVariants: 'sonstige Varianten und Notizen'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
 pagePrev: 'vorige Seite'
