Initialize master and capitalize other variants

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -46,7 +46,7 @@ metadataHide: 'Bibliografische Daten verbergen'
 metadataShow: 'Bibliografische Daten anzeigen'
 note: 'Notiz'
 number: 'Nummer&nbsp;{number}'
-otherVariants: 'sonstige Varianten und Notizen'
+otherVariants: 'Sonstige Varianten und Notizen'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
 pagePrev: 'vorige Seite'
