--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -16,6 +16,7 @@ fulltextNotAvailable: 'Der Volltext dieses Briefes ist noch nicht verfügbar.'
 date: 'Datum'
 goettingenAcademyOfSciencesAndHumanities: 'Akademie der Wissenschaften zu Göttingen'
 goToPortal: 'Zum AdW-Portal'
+goToStart: 'Zur Startseite.'
 historicCriticalEdition: 'Historisch-kritische Ausgabe:'
 impressum: 'Impressum'
 infoAndHelp: 'Info &amp; Hilfe'
@@ -33,13 +34,14 @@ languageName:
   swe: 'Schwedisch'
 leibnizLetters: 'Briefportal Leibniz'
 letterNext: 'Folgender Brief dieser Korrespondenz'
-letterNotExisting: 'Brief <i>{id}</i> existiert nicht'
+letterNotExisting: 'Brief <i>{id}</i> existiert nicht.'
 letterNotExistingPrev: 'Kein vorhergehender Brief vorhanden'
 letterNotExistingNext: 'Kein Nachfolgender Brief vorhanden'
 letterPrev: 'Vorhergehender Brief dieser Korrespondenz'
 loading: 'Brief wird geladen &hellip;'
 location: 'Ort'
 locations: 'Orte'
+manuscript: 'Manuskript'
 menu: 'Menü'
 metadata: 'Bibliografische Daten'
 metadataHide: 'Bibliografische Daten verbergen'
@@ -49,11 +51,11 @@ number: 'Nummer&nbsp;{number}'
 otherVariants: 'Sonstige Varianten und Notizen'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
+pageNotFound: 'Verzeihung, diese Seite ist nicht vorhanden.'
 pagePrev: 'vorige Seite'
 permaLink: 'Persistente URL:'
 recipient: 'Empfänger'
 restore: 'Wieder herstellen'
-manuscript: 'Manuskript'
 search: 'Suchen'
 searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
