Keep lane actions visible when scrolling down
When scrolling down below the lane header, fix the the actions section's
position, using continuously updated relative instead of fixed position to
prevent the lane height from changing.

- Introduce lane mixin, remove redundant component
- Add scroll trigger to every lane
- Add fixed scroll-to-top button
- Show popup only when parent element is hovered, not when popup itself is
- Small layout tweaks for lanes

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -61,6 +61,7 @@ respondsTo: 'Antwort auf'
 respondedBy: 'beantwortet durch'
 respondsIsLast: 'letzter Brief dieser Korrespondenz'
 restore: 'Wieder herstellen'
+scrollToTop: 'Zum Seitenanfang'
 search: 'Suchen'
 searchLetters: 'Briefe suchen'
 serialNumber: 'Seriennummer'
