Implement real-time fulltext search
Search within fulltext and several other fields, sortable by letter
number and date.

- Display letters from Leibniz on the left, others' on the right.
- Improve Solr error handling.
- Update translations and tests.

TODO: Include variants, add more sort options

Resolves: ADWD-2224

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -8,9 +8,12 @@ citationHide: 'Zitiervorschlag verbergen'
 citationShow: 'Zitiervorschlag anzeigen'
 contact: 'Kontakt'
 context: 'Kontext'
+dateAsc: Datum aufsteigend
+dateDesc: Datum absteigend
 databaseError: 'Datenbankfehler'
 dateGregorian: 'Gregorianisches&nbsp;Datum'
 dateJulian: 'Julianisches&nbsp;Datum'
+enterSearchTerm: 'Bitte geben Sie einen Suchbegriff ein.'
 exactDateUnknown: 'Genaues Datum unbekannt'
 fullScreen: 'Vollbild'
 fulltextNotAvailable: 'Der Volltext dieses Briefes ist noch nicht verfügbar.'
@@ -49,6 +52,7 @@ metadataHide: 'Bibliografische Daten verbergen'
 metadataShow: 'Bibliografische Daten anzeigen'
 note: 'Notiz'
 number: 'Nummer&nbsp;{number}'
+orderBy: sortiert nach
 otherVariants: 'Sonstige Varianten und Notizen'
 pageCurrent: 'aktuelle Seite'
 pageNext: 'nächste Seite'
@@ -56,14 +60,22 @@ pageNotFound: 'Verzeihung, diese Seite ist nicht vorhanden.'
 pagePrev: 'vorige Seite'
 permaLink: 'Persistente URL:'
 recipient: 'Empfänger'
+recipientAsc: Empfänger aufsteigend
+recipientDesc: Empfänger absteigend
 respondsIsFirst: 'Erster Brief dieser Korrespondenz'
 respondsTo: 'Antwort auf'
 respondedBy: 'beantwortet durch'
 respondsIsLast: 'letzter Brief dieser Korrespondenz'
 restore: 'Wieder herstellen'
+resultsFor: 'Ergebnisse für'
 scrollToTop: 'Zum Seitenanfang'
 search: 'Suchen'
+searchNoun: 'Suche'
 searchLetters: 'Briefe suchen'
+seriesVolumeNumberAsc: 'Reihe, Band, Nummer aufsteigend'
+seriesVolumeNumberDesc: 'Reihe, Band, Nummer absteigend'
+senderAsc: Absender aufsteigend
+senderDesc: Absender absteigend
 serialNumber: 'Seriennummer'
 sender: 'Absender'
 series: 'Reihe&nbsp;{series}'
