Add notice to referenced lines Resolves: ADWD-2362

--- a/translations/de-de.yaml
+++ b/translations/de-de.yaml
@@ -86,5 +86,6 @@ transcript: 'Transkription'
 variant: 'Variante'
 variants: 'Varianten'
 volume: 'Band&nbsp;{volume}'
+referencedLines: 'Zeilenverweise beziehen sich auf die PDF-Ausgabe.'
 zoomIn: 'Vergrößern'
 zoomOut: 'Verkleinern'
